2008-05-25  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development -> 0.10.4.1

=== release 0.10.4 ===

2008-05-21  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.4, "A jump to the left"

2008-05-20  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.3.3 pre-release

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* ext/ffmpeg/gstffmpegcodecmap.c:
	* ext/ffmpeg/gstffmpegdemux.c:
	* ext/libpostproc/gstpostproc.c:
	Fix build with (Debian's) system ffmpeg. Fixes bug #532803.

2008-05-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.10.3.2 pre-release

2008-05-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* docs/plugins/gst-ffmpeg-plugins.args:
	* docs/plugins/gst-ffmpeg-plugins.hierarchy:
	* docs/plugins/gst-ffmpeg-plugins.interfaces:
	* docs/plugins/gst-ffmpeg-plugins.prerequisites:
	* docs/plugins/inspect/plugin-ffmpeg.xml:
	Update docs

2008-05-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/ext/Makefile.am:
	More fixes for make dist

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ffmpegrev:
	Update to today's upstream ffmpeg. No visible regressions.

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	* gst-libs/ext/Makefile.am:
	More fixes for make dist.

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_img_convert):
	Replace usage of img_convert (deprecated) by sws_scale.
	Fixes #529015

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	Fix doc-building and make dist.

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/ext/Makefile.am:
	Don't copy file which is no longer present.

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegaudioresample.c:
	(gst_ffmpegaudioresample_class_init),
	(gst_ffmpegaudioresample_init),
	(gst_ffmpegaudioresample_transform_caps),